# 2real

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dev.ps1
demos/basic_rendering/: README.md  basic_rendering.cpp  cube_texture.h
demos/physics_2d/: drawer.h  physics_2d.cpp
docs/: README.md  Roadmap.md
docs/.obsidian/: app.json  community-plugins.json  hotkeys.json
docs/devlog/: 2026-04.md  2026-05.md  2026-06.md  2026-07.md
docs/notes/: SIMD.md  barycentric-interpolation.md  clipping.md  coordinate-system.md  cpp-views.md  define-in-cpp.md  depth-buffer.md  edge-functions.md  lambas.md  matrices.md  obj-files.md  physics-debug-view.md  planes.md  projections.md  rendering-pipeline.md  socd.md  templates.md  third-party.md  threading.md  triangle-filling.md  view-matrix.md
src/: input.h  main.cpp
src/engine/: fps_logger.h  init.cpp  init.h  run.cpp  run.h  sdl.cpp  sdl.h  timing.h
src/input/: input.cpp  input.h
src/math/: common.h  fixed.h  mat4.h  plane.h  rect.h  vec2.h  vec2_fixed.h  vec3.h  vec4.h
src/physics/: body.cpp  body.h  collision.cpp  collision.h  contact.h  force.cpp  force.h  particle.cpp  particle.h  shape.h  transform.h
src/render/: camera.h  clipping.cpp  clipping.h  color.h  context.cpp  context.h  draw.cpp  draw.h  framebuffer.cpp  framebuffer.h  frustum.h  graphics.cpp  graphics.h  mesh.h  obj_loader.cpp  obj_loader.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  texture.h  texture_loader.cpp  texture_loader.h  triangle.h  viewport.h
src/renderer/: camera.h  renderer.cpp  renderer.h
src/scene/: camera.h  camera_controller.h  light.h  mesh.h  scene.h
src/util/: overload.h
